r300: Check ctx->WinSysDrawBuffer before calling function that dereferences it.

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=10417 .